# AFS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Files/: websites.md
Notes/: gfs_detail.md  gfs_problems.md
build-src-Desktop_Qt_5_8_0_GCC_64bit_for_AFS-Default/: AFS  AFS.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  header.h  main.cpp  master_design.md  sugar.hpp
src/Filesystem/: master.h  setting.h
src/components/: chunkpool.cpp  chunkpool.h  error.hpp  extrie.hpp  message.hpp  parser.hpp  sugar.hpp
src/filesystem/: chunk.cpp  chunk.h  chunkserver.cpp  chunkserver.cpp.autosave  chunkserver.h  client.cpp  client.h  common.h  error.hpp  master.cpp  master.h  metadata.cpp  metadata.h  server.h  server.hpp
src/filesystem/master/: address_serverdata.cpp  address_serverdata.h  handle_chunkdata.cpp  handle_chunkdata.h  log_contaner.cpp  log_contaner.h  master.cpp  master.h  path_filedata.cpp  path_filedata.h  setting.hpp
src/filesystem/message_and_setting/: data.cpp  data.h  log.cpp  log.h  rpc_structs.h  setting.h
src/filesystem/servers/: master.cpp  master.h  server.cpp  server.h
src/test/: common.h  common_headers.h  graybox.cpp  graybox_basic.cpp  graybox_basic.h  graybox_env.cpp  graybox_env.h  pipestream.hpp
src/tests/: extrie_test.hpp  log_test.hpp
src/tests/LightDSTest/: servera.cpp  servera.h  serverb.cpp  serverb.h
src/tests/MasterTest/: hcdmTest.cpp  hcdmTest.h  hcdmTest.hpp  masterTest.cpp  masterTest.h  masterTest.hpp
